--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,7 +506,7 @@ text-align: justify;
 
 *::-webkit-scrollbar
 {
-  width: 8px;
+  width: 15px;
   /*background-color: #F5F5F5;*/
 }
 
